# mcp-google-workspace

./: .gitattributes  .gitignore  .mcpbignore  CODE_REVIEW_2026-07-10.md  CODE_REVIEW_2026-07-12.md  Dockerfile  README.md  docker-compose.yml  manifest.json  pyproject.toml  ui_manifest.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: MCPB.md  QA_TODO.md  RICH_OUTPUTS.md
plugins/google-workspace/.claude-plugin/: plugin.json
scripts/: build_mcpb.py  qa_apps_smoke.py  qa_run_all_tools.py
src/mcp_google_workspace/: __init__.py  __main__.py  bundle_entry.py  file_uploads.py  runtime.py  server.py  server_http.py  server_sse.py  tool_discovery.py
src/mcp_google_workspace/apps/: __init__.py  actions.py  idempotency.py  resources.py  schemas.py  server.py  state.py  tools.py  view_models.py
src/mcp_google_workspace/auth/: __init__.py  google_auth.py  google_oauth.py  identity.py  token_store.py
src/mcp_google_workspace/calendar/: __init__.py  presentation.py  schemas.py  server.py  tools.py
src/mcp_google_workspace/chat/: __init__.py  client.py  presentation.py  prompts.py  resources.py  schemas.py  server.py  tools.py
src/mcp_google_workspace/common/: __init__.py  approvals.py  async_ops.py  component_annotations.py  crypto.py  downloads.py  errors.py  output_schemas.py  parsing.py  production.py  request_model.py  resources.py  s3_uploads.py  (+1 more)
tests/: test_annotations_and_startup.py  test_auth_scopes.py  test_bundle_manifest.py  test_bundle_runtime.py  test_calendar_free_slots.py  test_calendar_tools.py  test_chat_tools.py  test_composition.py  test_docs_tools.py  test_drive_tools.py  test_file_uploads.py  test_forms_tools.py  test_gemini_tools.py  test_gmail_tools.py  test_keep_tools.py  test_meet_tools.py  test_multiuser_sse.py  test_output_schema_inference.py  test_people_tools.py  test_production_features.py  test_sheets_tools.py  test_slides_tools.py  test_tasks_tools.py  test_tool_discovery.py  test_tool_request_model_compat.py  test_upload_lifecycle.py  test_user_timezone.py
tests/apps/: test_actions.py  test_mcp_server.py  test_state.py  test_tools.py  test_view_models.py
tmp/: discover-plugins.md  plugin-marketplaces.html  plugin-marketplaces.md  qa_drive_download.txt  qa_drive_upload.txt
(+92 files in other folders)
