[project]
name = "mcp-google-workspace"
version = "0.3.0"
description = "Production MCP server for Gmail, Google Calendar, Keep, Drive and Chat"
readme = "README.md"
authors = [
    { name = "Guilherme Inácio", email = "gsilvainacio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3.0.2",
    "google-genai>=1.67.0",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "pydantic[email]>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
]

[project.scripts]
mcp-google-workspace = "mcp_google_workspace.bundle_entry:main"
mcp-google-workspace-sse = "mcp_google_workspace.server_sse:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
