[project]
name = "mcp-google-workspace"
version = "0.3.4"
description = "Production MCP server for Gmail, Google Calendar, Keep, Drive and Chat"
readme = "README.md"
authors = [
    { name = "Guilherme Inácio", email = "gsilvainacio@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.0",
    "cryptography>=48.0.1",
    "fastmcp[apps,tasks]>=3.4.4",
    "google-genai>=1.67.0",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "pydantic[email]>=2.12.5",
    "idna>=3.15",
    "pyasn1>=0.6.3",
    "pydantic-settings>=2.14.2",
    "pygments>=2.20.0",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
]

[project.scripts]
mcp-google-workspace = "mcp_google_workspace.bundle_entry:main"
mcp-google-workspace-http = "mcp_google_workspace.server_http:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.3",
    "ruff>=0.15.4",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
